--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "modern-normalize": "^2.0.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-lazy-load": "^4.0.1",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
